@@ -1,3 +1,7 @@
+2006-03-16  Jim Garlick <garlick@llnl.gov>
+
+	* src/modules/xcpucmd.c : Add support support for signals.
+
 2006-03-15  Mark Grondona <mgrondona@llnl.gov>
 	* src/pdsh/mod.c : Remove error message when loading duplicate
 	  module in pdsh. This is OK since we removed code which
